syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.manage.pix";
option java_outer_classname = "Pix";
option objc_class_prefix = "HLW";

package br.com.zup.manage.pix;

service ManagePixService {
  rpc registerKey(RegisterKeyRequest) returns (RegisterKeyResponse){}
}

enum KeyType {
  UNKNOWN_TYPE = 0;
  CPF = 1;
  EMAIL = 2;
  PHONE = 3;
  RANDOM = 4;
}

enum AccountType {
  UNKNOWN_ACCOUNT = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegisterKeyRequest {
  string customerId = 1;
  KeyType type = 2;
  string  value = 3;
  AccountType accountType = 4;
}
message RegisterKeyResponse {
  int64 keyId = 1;
  string key = 2;
}
